tests/baselines/reference/anonymousClassExpression1.errors.txt
tests/cases/compiler/anonymousClassExpression1.ts(2,19): error TS9003: 'class' expressions are not currently supported.


==== tests/cases/compiler/anonymousClassExpression1.ts (1 errors) ====
    function f() {
        return typeof class {} === "function";
                      ~~~~~
!!! error TS9003: 'class' expressions are not currently supported.
    }